fix project images on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,3 @@ body {
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
