--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -4,6 +4,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  width: 100vw;
 }
 
 .Navigation ul {
