--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,3 +1,7 @@
+.Projects {
+  min-width: fit-content;
+}
+
 .Projects-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
